tdf#145190 INetProtocol: add Ssh (allows edit of remote service)

Open/Save remote SSH service could not be edited once it was
created because LO couldn't identify the SSH protocol prefix.

URI format  ssh://[username[:password]@]host[:port][?options], so:

m_bAuthority = true;     //has username || host || port
m_bUser = true;
m_bAuth = false;         //doesn't seem likely to support auth=
m_bPassword = true;
m_bHost = true;
m_bPort = true;
m_bHierarchical = false; //can specify a path
m_bQuery = true;         //the ?options is a query portion

Change-Id: I7796e6a75281d059d31a74462fa9ed472f84a8f1